# fuzzy-waddle

./: .env.example  .gitignore  README.md  config.example.yaml  main.py  pyproject.toml  requirements.txt
.github/workflows/: tests.yml
job_applier/: cli.py  config.py  orchestrator.py
job_applier/ai/: answerer.py  prompts.py
job_applier/browser/: auth.py  session.py
job_applier/utils/: errors.py  logging.py  rate_limiter.py
polymarket_bot/: __init__.py  aggregation.py  analyzer.py  bot.py  client.py  config.py  executor.py  risk_manager.py
polymarket_bot/strategies/: __init__.py  base.py  mean_reversion.py  momentum.py  orderbook_imbalance.py  resolution_drift.py  sentiment.py  value.py  volume_spike.py
tests/: conftest.py  test_aggregation.py  test_base.py  test_bot_cycle.py  test_config.py  test_executor.py  test_new_strategies.py  test_other_strategies.py  test_risk_manager.py  test_sentiment_strategy.py  test_value_strategy.py
