[build-system]
requires = ["setuptools>=70"]
build-backend = "setuptools.backends.legacy:build"

[project]
name = "fuzzy-waddle"
version = "0.1.0"
requires-python = ">=3.11"
dependencies = [
    "playwright>=1.44",
    "anthropic>=0.28",
    "pydantic>=2.7",
    "pyyaml>=6.0",
    "click>=8.1",
    "pdfplumber>=0.11",
    "pymupdf>=1.24",
    "python-docx>=1.1",
]

[project.scripts]
job-applier = "job_applier.cli:cli"

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "pytest-asyncio>=0.23",
]

[tool.setuptools.packages.find]
where = ["."]
include = ["job_applier*"]
